[package]
name = "surrealdb-tikv-client-pd"
version = "0.1.0-surreal.2"
edition = "2018"
license = "Apache-2.0"
authors = ["The TiKV Project Authors"]
repository = "https://github.com/tikv/client-rust"
description = "Low level PD components for the TiKV Rust client"

[dependencies]
async-trait = "0.1"
futures = { version = "0.3", features = ["compat", "async-await", "thread-pool"] }
grpcio = { version = "0.10", features = [ "boringssl", "prost-codec" ], default-features = false }
log = "0.4"
surrealdb-tikv-client-common = { version = "0.1.0-surreal.2", path = "../tikv-client-common" }
surrealdb-tikv-client-proto = { version = "0.1.0-surreal.2", path = "../tikv-client-proto" }

[dev-dependencies]
clap = "2"
fail = { version = "0.4", features = [ "failpoints" ] }
proptest = "1"
proptest-derive = "0.3"
